<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="16dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/etEventTitle"
        android:hint="@string/event_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/btnGenerate"
        android:text="@string/generate_qr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"/>

    <ImageView
        android:id="@+id/imgQr"
        android:layout_width="260dp"
        android:layout_height="260dp"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:background="#EEEEEE"/>

</LinearLayout>
